# kicad-ai-workflow

./: .gitignore  CLAUDE.md  pyproject.toml
Documentation/: kicad_pipeline_plan_part1.md  kicad_pipeline_plan_part2.md  projectspecs.md  projectspecs_old.md
data/: drill_chart.json  e_series.json  jlcpcb_basic_parts.json  rotation_offsets.json
docs/: board_guidelines.md  bug_report_placement_v7.md  framework_v2.md  known_issues.md  pcb_layout_roadmap.md  placement_group_requirements.md  placement_iteration_log.md  placement_requirements.md  reference_placement_analysis.md  specifications.md  visual_inspection_process.md
scripts/: generate_adc_schematic.py  regenerate_smd0603.py
src/kicad_pipeline/: constants.py  design_state.py  exceptions.py  (+1 more)
tests/: test_agent_cli.py  test_agent_commands.py  test_agent_models.py  test_agent_monitor.py  test_agent_registry.py  test_agent_reporter.py  test_agent_status.py  test_board_sizer.py  test_board_templates.py  test_bom.py  test_changelog.py  test_checklist.py  test_cli.py  test_component_db.py  test_constants_exceptions.py  test_cpl.py  test_decomposer.py  test_design_review.py  test_design_state.py  test_drc.py  test_drc_interpreter.py  test_drill.py  test_dsn_export.py  test_electrical.py  test_electrical_dip.py  test_enrich.py  test_erc.py  test_fast_scoring.py  test_footprint_courtyard.py  test_footprints.py  test_freerouting.py  test_functional_grouper.py  test_gerber.py  test_git_ops.py  test_git_strategy.py  test_grid_router.py  test_group_placer.py  test_hierarchical.py  test_ipc_board_ops.py  test_ipc_connection.py  (+54 more)
(+104 files in other folders)
