[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-ai-pipeline"
version = "0.1.0"
description = "AI-assisted KiCad EDA pipeline: requirements to production-ready manufacturing files"
requires-python = ">=3.10"
dependencies = []  # Core is dependency-free

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]
github = [
    "PyGithub>=2.0",
]

[project.scripts]
kicad-pipeline = "kicad_pipeline.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short"

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.coverage.run]
source = ["src/kicad_pipeline"]

[tool.coverage.report]
fail_under = 85
